syntax = "proto3";

option go_package = "app/utils/userpb";

service RequestService {
    rpc FetchData (UserRequest) returns (Response);
}

message UserRequest {
    string id = 1;
    string url = 2;
    string requestMethod = 3;
    map<string, string> headerKey = 4;
    map<string, string> headerApiHost = 5;
}

message Response {
    string id = 1;
    map<string, string> meta = 2;
    map<string, string> data = 3;
}
